src/objects/DF_Event__c.object
<CustomObject>
    <fields>
        <fullName>Preference_1_Period__c</fullName>
        <label>Preference 1: Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Morning (7am-12pm)</fullName>
                </value>
                <value>
                    <fullName>Afternoon (12pm-5pm)</fullName>
                </value>
                <value>
                    <fullName>Evening (5pm-10pm)</fullName>
                </value>
                <value>
                    <fullName>Any time</fullName>
                </value>
                <value>
                    <fullName>Specific time (hh:mm)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preference_1_Time__c</fullName>
        <label>Preference 1: Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preference_2_Date__c</fullName>
        <label>Preference 2: Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Preference_2_Period__c</fullName>
        <label>Preference 2: Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Morning (7am-12pm)</fullName>
                </value>
                <value>
                    <fullName>Afternoon (12pm-5pm)</fullName>
                </value>
                <value>
                    <fullName>Evening (5pm-10pm)</fullName>
                </value>
                <value>
                    <fullName>Any time</fullName>
                </value>
                <value>
                    <fullName>Specific time (hh:mm)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preference_2_Time__c</fullName>
        <label>Preference 2: Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preference_3_Date__c</fullName>
        <label>Preference 3: Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Preference_3_Period__c</fullName>
        <label>Preference 3: Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Morning (7am-12pm)</fullName>
                </value>
                <value>
                    <fullName>Afternoon (12pm-5pm)</fullName>
                </value>
                <value>
                    <fullName>Evening (5pm-10pm)</fullName>
                </value>
                <value>
                    <fullName>Any time</fullName>
                </value>
                <value>
                    <fullName>Specific time (hh:mm)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preference_3_Time__c</fullName>
        <label>Preference 3: Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Care_Trust__c</fullName>
        <label>Primary Care Trust</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_Places__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>For info sessions created for an organisation, the number of places to be reserved for members of that ord is stated here</inlineHelpText>
        <label>Private Places</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Public_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Public_Places__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>For info sessions that also are available publicly, state the number of places open to the public here</inlineHelpText>
        <label>Public Places</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSO2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trainer 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DF_Events1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RSO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trainer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>RSO</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>DF_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecordType_Name__c</fullName>
        <formula>$RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordType Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting for approval</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Open - waiting for champion</fullName>
                </value>
                <value>
                    <fullName>Matched with champion</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Unsuccessful</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Info_Session__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies Info Session records that were requested (as opposed to sessions offered up by a champion)</inlineHelpText>
        <label>Requested Info Session</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requester_Reason_for_Interest__c</fullName>
        <label>Requester Reason for Interest</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Safety_Marshal_Contact_Number__c</fullName>
        <label>Safety Marshal Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Safety_Marshal_Name__c</fullName>
        <label>Safety Marshal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Cancellation_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Session Cancellation Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Session_Organiser_Email__c</fullName>
        <formula>Session_Organiser__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Session Organiser Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Organiser_Firstname__c</fullName>
        <formula>Session_Organiser__r.First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Session Organiser Firstname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Organiser_Lastname__c</fullName>
        <formula>Session_Organiser__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Session Organiser Lastname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Organiser_Name__c</fullName>
        <formula>Session_Organiser__r.First_Name__c + &apos; &apos; + Session_Organiser__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Session Organiser Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Organiser_Type_Of_Contact__c</fullName>
        <formula>Session_Organiser__r.RecordType_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Session Organiser Type Of Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Organiser__c</fullName>
        <label>Session Organiser</label>
        <referenceTo>DF_Contact__c</referenceTo>
        <relationshipLabel>Sessions Organised</relationshipLabel>
        <relationshipName>DF_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Session_Requester_Email__c</fullName>
        <formula>Session_Requester__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Session Requester Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Requester_Firstname__c</fullName>
        <formula>Session_Requester__r.First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Session Requester Firstname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Requester_Name__c</fullName>
        <formula>Session_Requester__r.First_Name__c + &apos; &apos; + Session_Requester__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Session Requester Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Session Requester</label>
        <referenceTo>DF_Contact__c</referenceTo>
        <relationshipLabel>DF Events (Session Requester)</relationshipLabel>
        <relationshipName>Session_Requester</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Session_Requester_is_Safety_Marshal__c</fullName>
        <label>Session Requester is Safety Marshal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Health_Authority__c</fullName>
        <label>Strategic Health Authority</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Session_Hours__c</fullName>
        <label>Total Session Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trainer_Email__c</fullName>
        <formula>Trainer__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trainer Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trainer_Firstname__c</fullName>
        <formula>Trainer__r.First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trainer_Firstname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trainer_Lastname__c</fullName>
        <formula>Trainer__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trainer Lastname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trainer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>DF_Contact__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Dementia Friend Champion, RSO</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>DF_Contact__c</referenceTo>
        <relationshipLabel>DF Events (Trainer)</relationshipLabel>
        <relationshipName>DF_Events1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_of_session__c</fullName>
        <label>Type of session</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>#TeamDementiaFriends - Football Campaign</fullName>
                </value>
                <value>
                    <fullName>Beavers / Cubs / Scouts / Explorers</fullName>
                </value>
                <value>
                    <fullName>Black, Asian or minority ethnic group</fullName>
                </value>
                <value>
                    <fullName>College / University</fullName>
                </value>
                <value>
                    <fullName>Community group</fullName>
                </value>
                <value>
                    <fullName>Faith groups</fullName>
                </value>
                <value>
                    <fullName>Family &amp; friends</fullName>
                </value>
                <value>
                    <fullName>Finance organisation</fullName>
                </value>
                <value>
                    <fullName>First Friend</fullName>
                </value>
                <value>
                    <fullName>General public</fullName>
                </value>
                <value>
                    <fullName>Group not listed</fullName>
                </value>
                <value>
                    <fullName>Group with additional needs (e.g. D/deaf)</fullName>
                </value>
                <value>
                    <fullName>Health &amp; social care organisation</fullName>
                </value>
                <value>
                    <fullName>Housing organisation</fullName>
                </value>
                <value>
                    <fullName>Leisure organisation</fullName>
                </value>
                <value>
                    <fullName>Local government</fullName>
                </value>
                <value>
                    <fullName>Other business/organisation</fullName>
                </value>
                <value>
                    <fullName>Other youth group</fullName>
                </value>
                <value>
                    <fullName>People affected by dementia &amp; carers</fullName>
                </value>
                <value>
                    <fullName>Primary school</fullName>
                </value>
                <value>
                    <fullName>Rainbows / Brownies / Guides / Rangers</fullName>
                </value>
                <value>
                    <fullName>Retail organisation</fullName>
                </value>
                <value>
                    <fullName>Secondary school</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Venue_has_Public_Liability_Insurance__c</fullName>
        <label>Venue has Public Liability Insurance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Webinar_URL__c</fullName>
        <label>Webinar URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Westminister_Constituency__c</fullName>
        <label>Westminister Constituency</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wheel_Chair_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wheel Chair Access</label>
        <type>Checkbox</type>
    </fields>
    <label>DF Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Event_Date_Time__c</columns>
        <columns>Event_Status__c</columns>
        <columns>Location__c</columns>
        <columns>Number_of_Places__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>DF</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Champion_Training_Events</fullName>
        <columns>NAME</columns>
        <columns>Event_Date_Time__c</columns>
        <columns>Event_Status__c</columns>
        <columns>City__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Session_Organiser__c</columns>
        <columns>Trainer__c</columns>
        <columns>RSO__c</columns>
        <columns>RSO2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>DF_Event__c.Champion_Training_Course</value>
        </filters>
        <label>Champion Training Events</label>
    </listViews>
    <listViews>
        <fullName>Created_Today</fullName>
        <columns>NAME</columns>
        <columns>Event_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created Today</label>
    </listViews>
    <listViews>
        <fullName>DFC_training_in_future</fullName>
        <columns>NAME</columns>
        <columns>Event_Date_Time__c</columns>
        <columns>Event_Status__c</columns>
        <columns>Public_Event__c</columns>
        <columns>Number_Of_Champions_Attended__c</columns>
        <columns>Number_of_Places__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordType_Name__c</field>
            <operation>equals</operation>
            <value>Champion Training Course</value>
        </filters>
        <filters>
            <field>Event_Date_Time__c</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>DFC training in future</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Data_Loader</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Event_Date_Time__c</columns>
        <columns>Event_Status__c</columns>
        <columns>Location__c</columns>
        <columns>Number_of_Places__c</columns>
        <columns>Data_Loader__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_Loader__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Data Loader</label>
    </listViews>
    <listViews>
        <fullName>Friends_Session</fullName>
        <columns>NAME</columns>
        <columns>Number_of_Places__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Event_Date_Time__c</columns>
        <columns>Event_Status__c</columns>
        <columns>Number_of_Attendees__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>DF_Event__c.Dementia_Friend_Awareness_Session</value>
        </filters>
        <filters>
            <field>Number_of_Places__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Number_of_Attendees__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Event_Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </filters>
        <label>Friends Session reported issue</label>
    </listViews>
    <nameField>
        <label>DF Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DF Events</pluralLabel>
    <recordTypes>
        <fullName>Champion_Forum_Event</fullName>
        <active>true</active>
        <label>Champion Forum Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Champion_Training_Course</fullName>
        <active>true</active>
        <description>Events organised by Alzheimers Society/Trusted Partners</description>
        <label>Champions Induction</label>
    </recordTypes>
    <recordTypes>
        <fullName>Champions_Networking_Event</fullName>
        <active>true</active>
        <label>Champions Networking Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dementia_Friend_Awareness_Session</fullName>
        <active>true</active>
        <description>Events organised by DF Champions</description>
        <label>Dementia Friend Information Session</label>
    </recordTypes>
    <recordTypes>
        <fullName>Webinar</fullName>
        <active>true</active>
        <label>Webinar</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Enforce_Datetime_Update_on_Champ_Signup</fullName>
        <active>true</active>
        <description>For internal updates (i.e. events that are updated by the DF Admin team and not via the DF website), ensure that the start and end time of the DF EVent is updated upon matching an event with a champion</description>
        <errorConditionFormula>ISPICKVAL($Profile.UserType, &apos;Standard&apos;) &amp;&amp;
!ISNEW()
&amp;&amp;
ISPICKVAL(Request_Status__c, &apos;Matched with champion&apos;) 
&amp;&amp;
(PRIORVALUE( Session_Organiser_Email__c ) != Session_Organiser_Email__c)
&amp;&amp;
(!ISCHANGED( Event_Date_Time__c ) || !ISCHANGED( Event_End_Date_Time__c ))
&amp;&amp;
PRIORVALUE( Session_Organiser_Email__c ) == &apos;tobeconfirmed@mailinator.com&apos;</errorConditionFormula>
        <errorMessage>Please edit the Event Start and End Datetime fields when manually changing the Session Organiser manually</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Event_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>Event_Date_Time__c &gt; Event_End_Date_Time__c</errorConditionFormula>
        <errorMessage>You cannot select an end date that is earlier than the start date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Event_Not_Full</fullName>
        <active>false</active>
        <description>Check for the event being marked full, where spaces are still available</description>
        <errorConditionFormula>IF(AND(Number_of_Places__c - Number_Of_Attendee_Records__c &gt; 0,
ISPICKVAL(Event_Status__c, &quot;Full&quot;)),TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Event_Status__c</errorDisplayField>
        <errorMessage>You cannot set the event status to &quot;Full&quot; if there are still places available. Please lower the number of places to match the number of attendees before setting the event status to &quot;Full&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Event_Not_Full_Champions</fullName>
        <active>false</active>
        <description>You cannot set the event status to &quot;Full&quot; if there are still places available. Please lower the number of places to match the number of attendees before setting the event status to &quot;Full&quot;.</description>
        <errorConditionFormula>IF(Number_of_Places__c - Number_Of_Champions_Attended__c  &lt;&gt;  0,IF( ISPICKVAL(Event_Status__c, &quot;Full&quot;), TRUE, FALSE),FALSE)</errorConditionFormula>
        <errorDisplayField>Event_Status__c</errorDisplayField>
        <errorMessage>You cannot set the event status to &quot;Full&quot; if there are still places available. Please lower the number of places to match the number of attendees before setting the event status to &quot;Full&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Availability_Unapproved_Session</fullName>
        <active>true</active>
        <description>Prevent the Event Status being set to anything other than &quot;Not Live / Approved&quot; before the session request field has been set to an approved status by a DF admin</description>
        <errorConditionFormula>ISCHANGED(Event_Status__c)
&amp;&amp;
 Requested_Info_Session__c 
&amp;&amp;
ISPICKVAL(Request_Status__c, &apos;Waiting for approval&apos;)</errorConditionFormula>
        <errorDisplayField>Event_Status__c</errorDisplayField>
        <errorMessage>The event status cannot be changed until the session is approved by a Dementia Friends administrator</errorMessage>
    </validationRules>
</CustomObject>